--- a/public/register.html
+++ b/public/register.html
@@ -2,16 +2,18 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<title>Register</title>
+<title>Register - Cyber Web</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>สมัครสมาชิก</h1>
-<form action="/register" method="POST">
-  <input type="text" name="username" placeholder="Username" required><br><br>
-  <input type="password" name="password" placeholder="Password" required><br><br>
-  <button type="submit">สมัคร</button>
-</form>
-<a href="/login.html">ไปหน้า Login</a>
+<div class="container">
+  <h1>สมัครสมาชิก</h1>
+  <form action="/register" method="POST">
+    <input type="text" name="username" placeholder="Username" required><br>
+    <input type="password" name="password" placeholder="Password" required><br>
+    <button type="submit">สมัคร</button>
+  </form>
+  <a href="/login.html">ไปหน้า Login</a>
+</div>
 </body>
 </html>
